RegExp sticky not matching alternates correctly, ignoring lastIndex requirement https://bugs.webkit.org/show_bug.cgi?id=214181

Reviewed by Yusuke Suzuki.

JSTests:

New test.

* stress/regexp-sticky-tests.js: Added.
(assert):

Source/JavaScriptCore:

In the YARR JIT, we need to check for sticky patterns before checking for fixed character
terms when backtracking.  The YARR interpreter doesn't have this issue.

* yarr/YarrJIT.cpp:


Canonical link: https://commits.webkit.org/228051@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265373 268f45cc-cd09-0410-ab3c-d52691b4dbfc